# casestudy

./: .env.example  .gitignore  DETAILED_GUIDE.md  LICENSE  README.md  SCORING_GUIDE.md  docker-compose.yml  finetune_train.jsonl  index.json  report.md  requirements.txt
eval/: README.md  gold_labels.json  run_eval.ps1  run_eval.sh  scoring_rubric.json  tasks.json
eval/checks/: baseline_sanity.mjs  run_check.mjs
eval/phase_checks/: phase1_rag.mjs  phase2_prompting.mjs  phase3_finetune.mjs  phase4_analytics.mjs
eval/training_data/: examples.jsonl  hard_negatives.jsonl
ggf-mini-game/: package-lock.json  package.json  tsconfig.json
ggf-mini-game/src/: demo.ts  index.ts
ggf-mini-game/src/core/: gameState.ts
ggf-mini-game/src/systems/: enemyAI.ts  input.ts  pause.ts  save.ts  score.ts
solution/: pyproject.toml
solution/src/ggf_case/: __init__.py  cli.py  config.py
solution/src/ggf_case/analytics/: __init__.py  experiment.py  failure_analyzer.py
solution/src/ggf_case/eval/: runner.py
solution/src/ggf_case/finetune/: __init__.py  data_curator.py  evaluator.py  trainer.py
solution/src/ggf_case/llm/: __init__.py  openai_compat.py  prompts.py  structured_output.py
solution/src/ggf_case/metrics/: __init__.py  patch_metrics.py  retrieval_metrics.py
solution/src/ggf_case/patch/: __init__.py  apply_patch.py  diff_guard.py
solution/src/ggf_case/rag/: __init__.py  bm25.py  hybrid.py  indexer.py  reranker.py  retriever.py
