[project]
name = "ggf-llm-case"
version = "2.0.0"
description = "GGF LLM Systems Case - Solution Skeleton (RAG + Fine-Tuning + Analytics)"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
embeddings = [
    "sentence-transformers>=2.5.0",
    "torch>=2.0.0",
]
qdrant = [
    "qdrant-client>=1.8.0",
]
analytics = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
all = [
    "ggf-llm-case[embeddings,analytics,dev]",
]

[project.scripts]
ggf-case = "ggf_case.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
